fix : 불필요한 js 제거, 클라이언트 단에서 계산되게 변경

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,8 @@
 <script>
     function addToCart(productId) {
         let formData = new FormData();
-        formData.append("productName", productId);
+        formData.append("productId", productId);
+        formData.append("quantity", 1);
 
         fetch('/cart/add', {
             method: 'POST',
