add : spring security(register) error : login html

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container" id="container">
     <div class="form-container sign-up-container">
-        <form role="form" action="/register" th:object="${siteUserForm}" method="post">
+        <form role="form" th:action="@{/api/users/register}" th:object="${siteUserForm}" method="post">
             <h1>Create Account</h1>
             <div class="social-container">
                 <!--<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -16,9 +16,9 @@
                 <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>-->
             </div>
             <span>or use your email for registration</span>
-            <input type="text" th:filed="*{name}" placeholder="Name"/>
+            <input type="text" placeholder="Name"/>
             <input type="text" placeholder="ID" />
-            <input type="email" placeholder="Email" />
+            <input type="email"  placeholder="Email" />
             <input type="password" placeholder="Password" />
             <button>Sign Up</button>
         </form>
